# ai-agents

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.agents/analysis/: 1769-monolith-section-classification.md  2003-claude-47-prompt-discipline-audit.md  2026-05-31-p2-triage.md  2026-06-06-issue-triage-sweep.md  2252-pr-description-default-flip-regression-sim.md  2252-pr-description-default-flip-regression-sim.py  command-skill-bundling-2026-05-03.md  cwe-22-scope-narrowing-architect-debate.md  instruction-specificity-audit-2026-04-22.md  instruction-specificity-prototype-security-compressed.md  skill-overlap-2026-06-05.md
.agents/architecture/: ADR-001-markdown-linting.md  ADR-006-thin-workflows-testable-modules.md  ADR-008-protocol-automation-lifecycle-hooks.md  ADR-040-skill-frontmatter-standardization.md  ADR-047-plugin-mode-hook-behavior.md  ADR-054-local-security-scanning.md  ADR-057-prompt-behavioral-evaluation.md  ADR-058-agent-eval-discipline.md  ADR-058-context-corpus-is-the-product.md  ADR-060-rework-warning-session-log-persistence.md  ADR-062-conditional-lsp-first-enforcement.md  ADR-063-memory-skill-decomposition.md  ADR-064-commands-to-skills-migration.md  ADR-065-orchestrator-as-router.md  ADR-066-hook-fail-open-reconciliation.md  ADR-067-validate-pr-change-claim-context.md  ADR-068-consolidated-hook-dispatcher.md  ADR-069-context-corpus-is-the-product.md  ADR-070-memory-first-gate-spec-pipeline.md  ADR-071-plugin-hook-runtime-contract-verification.md  ADR-TEMPLATE.md  DESIGN-REVIEW-context-optimizer-refactoring.md  SKILL-STANDARDS-RECONCILED.md
.agents/audit/: m5-matcher-classification.md  pr-creation-skip-20260428-144628.txt  pr-creation-skip-20260430-064504.txt  pr-req003-body.md  (+18 more)
.claude/: settings.json
.claude-plugin/: marketplace.json
.config/: wt.toml
.gemini/: styleguide.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
docs/: SEMANTIC_INDEX.yaml  SKILL-AUTHORING.md  agent-catalog.md  architecture.md  autonomous-pr-monitor.md  getting-started.md  guard-maturity-runbook.md  installation.md  orchestrator-routing-algorithm.md  project-structure.md  skill-reference.md  task-classification-guide.md  when-to-use.md
evals/: README.md  pr2126-eval-results.md
scripts/: AGENTS.md  README.md  Update-ReviewerSignalStats.ps1  backlog_triage_result.py  backlog_triage_summary.py  detect_scope_explosion.py  detect_skill_violation.py  invoke_batch_pr_review.py  issue_triage.py  log_session_end_skip.py  metrics_writer.py  redact_secrets.py  triage_batch_apply.py  triage_recommendation_report.py  validate_pr_review_config.py  validate_quality_gate_output.py  validate_session_json.py  validate_skill_installation.py  velocity_accelerator.py
src/: copilot-target-emitter.ts  types.ts
templates/: AGENTS.md  README.md  marketplace-counters.yaml
tests/: command-syntax-translator.test.ts  conftest.py  copilot-target-emitter.test.ts  test_actionlint_composite_action_exclusion.py  test_add_comment_reaction.py  test_adr_063_memory_skill_decomposition.py  test_agent_registry.py  test_aggregate_quality_verdicts.py  test_ai_review.py  test_ai_session_protocol_workflow.py  test_auto_retrospective.py  test_autonomy_guardrail_citation.py  test_backlog_triage_result.py  test_backlog_triage_summary.py  test_bootstrap.py  test_canonical_sources_registration.py  test_chaos_experiment_scripts.py  test_check_plugin_manifest_parity.py  test_check_pr_bypass_label.py  test_check_pr_live_state.py  test_checks_common.py  test_claude_mem_scripts.py  test_close_issue.py  test_command_bundles.py  test_context_budget_management.py  test_dependabot_workflow_token.py  test_detect_agent_drift.py  test_detect_scope_explosion.py  test_detect_skill_violation.py  test_eval_skill_overlap.py  test_extract_incremental_scope.py  test_false_completion_gate.py  test_feature_review.py  test_frontgate_crosslink_1927.py  test_generate_quality_report.py  test_get_issue_comments.py  test_get_latest_semantic_milestone.py  test_get_pr_check_logs.py  test_get_pr_checks.py  test_get_pr_context.py  (+69 more)
(+1479 files in other folders)
