[project]
name = "ai-agents"
version = "0.1.0"
description = "AI agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic==0.107.0",
    "markdown-it-py>=4.2.0",
    "python-frontmatter==1.3.0",
    "PyYAML==6.0.3",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "scripts.mcp_cli*", "scripts.memory_sync*", "scripts.hook_utilities*", "scripts.test_result_helpers*", "scripts.pr_maintenance*", "scripts.github_core*", "scripts.ai_review_common*", "scripts.validation*", "scripts.workflow*", "memory_enhancement*"]

[tool.pytest.ini_options]
testpaths = ["tests", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "smoke: Real-CLI smoke tests (need auth/credits; nightly only). The smoke gate asserts these were not skipped (issue #2231 item 4).",
]

[tool.coverage.run]
source = [".claude", "scripts", "scripts/memory_sync", "scripts/memory_enhancement"]
omit = ["**/tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", ".git"]
skips = []

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Eval scripts contain embedded prompt text that exceeds 100 chars by design
"scripts/eval/eval-agents.py" = ["E501"]
"scripts/eval/eval-knowledge-integration.py" = ["E501"]
# sys.path manipulation required before imports for plugin-context path resolution
".claude/skills/github/scripts/**/*.py" = ["E402"]
# Test files use sys.path.insert() before importing modules under test
"tests/hooks/**/*.py" = ["E402"]
"tests/skills/**/*.py" = ["E402"]
# ANN suppression for test files (annotations not required in tests)
"tests/**/*.py" = ["ANN"]
"test/**/*.py" = ["ANN"]
"**/tests/**/*.py" = ["ANN"]
# ANN suppression for pre-existing code (to be fixed incrementally)
".claude/skills/**/*.py" = ["ANN"]
".claude/hooks/**/*.py" = ["ANN"]
"packages/**/*.py" = ["ANN"]
# The skillbook schema checker validates values of arbitrary JSON type;
# `Any` is the honest annotation for an instance the checker will narrow.
"scripts/validation/validate_skillbook.py" = ["ANN401"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_any_generics = true

# Per-module overrides: suppress disallow_any_generics for pre-existing code
[[tool.mypy.overrides]]
module = "scripts.github_core.*"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "scripts.validate_skill_installation",
    "scripts.validate_skill_output",
    "scripts.validate_quality_gate_output",
    "scripts.measure_context_retrieval_metrics",
    "scripts.analyze_pr_failure",
    "scripts.pr_branch_mapping",
    "scripts.utils.markdown_parser",
    "scripts.validation.hook_contracts",
    "scripts.forgetful.import_forgetful_memories",
]
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "semantic_hooks.*"
disallow_any_generics = false

[[tool.mypy.overrides]]
# Pre-existing: mock.patch.object(csl.subprocess, ...) triggers spurious
# "None not callable [misc]" when complete_session_log is type-checked
# alongside the test file. The module name has no dotted prefix because
# tests/skills/session-end/ is not a valid Python package (hyphenated).
module = "test_rework_warning"
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
